# xrpl-account-auditor

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-18-xrpl-account-audit.md
docs/superpowers/specs/: 2026-06-18-xrpl-account-audit-design.md
tests/: conftest.py  test_cli.py  test_cluster.py  test_crawler.py  test_ledger_client.py  test_ledger_history.py  test_models.py  test_parser.py  test_report.py  test_signals.py  test_storage.py
tests/fixtures/: account_tx_sample.json
xrpl_audit/: cli.py  cluster.py  crawler.py  ledger_client.py  models.py  parser.py  report.py  signals.py  storage.py
