[project]
name = "xrpl-audit"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["xrpl-py>=2.5", "networkx>=3.0", "click>=8.0"]

[project.scripts]
audit = "xrpl_audit.cli:cli"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
